# libdistgen

./: .clang_complete  .travis.yml  CMakeLists.txt  README.md  distgen.c  distgen.cpp  distgen_internal.c  distgen_internal.cpp  distgen_internal.h  distgend.c  distgend.cpp  distgend.h  example.cpp  libdistgen.cpp  test.cpp
include/distgen/: distgen.h
src/: distgen.cpp  distgen_internal.cpp  example.cpp  libdistgen.cpp
